crates/aranya-policy-compiler/tests/data/structs/undefined_type_in_fact_option_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
1 | fact Foo[]=>{ s option[struct Unknown] }
  |                               ^^^^^^^ struct `Unknown` not defined
